--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </div>
 
 <div class="sDiv">
+    <h1>My WishList</h1>
     <table id="tableo">
         <tr class="mainTr">
             <td>Wish Title</td>
