fixed Input Bug :|

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="fDiv">
     <form id="forma">
         <label for="yourWish">Wish Title</label> <br>
-        <input type="text" name="yourWish"> <br>
+        <input type="text" name="yourWish" placeholder="hhhh"> <br>
         <label for="yourDate">Expected Date</label> <br>
         <input type="date" name="yourDate"> <br>
         <button>Add To My Wishlist</button>
