--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div class="fDiv">
     <form id="forma">
-        <label for="yourWish">Wish Title</label> <br>
-        <input type="text" name="yourWish" placeholder="hhhh"> <br>
-        <label for="yourDate">Expected Date</label> <br>
+        <label for="yourWish">Wish Title:</label> <br>
+        <input type="text" name="yourWish" placeholder="type it here.."> <br><br>
+        <label for="yourDate">Expected Date:</label> <br>
         <input type="date" name="yourDate"> <br>
         <button>Add To My Wishlist</button>
     </form>
@@ -31,6 +31,7 @@
             <td>Your Wish will Come True After XD</td>
             <td>Remove</td>
         </tr>
+
     </table>
 </div>
     <script src="app.js"></script>
